# PythonPractice

./: .gitignore  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
mysql_server/db/sql/: sample.sql
src/db/: db_utils.py  model.py
src/pcap/: plot.py
src/plantuml/: system.pu
src/plantuml/activitis/: sample.pu
src/plantuml/packege/: system.pu
src/plantuml/secuence/: sample.pu
